environments/gloo-edge/edge.glooplatform.com/gloo-edge-config/glootest.com/vs-patch.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: cf-advanced-tls-secret
      namespace: gloo-system
  virtualHost:
    domains:
    - 'argocd.edge.glooplatform.com'
    routes:
    - matchers:
      - prefix: /argo
      options:
        prefixRewrite: /argo
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-443
            namespace: gloo-system
